--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>shiver.me.timbers</groupId>
     <artifactId>smt-site-skin</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
@@ -28,6 +28,6 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:karlbennett/${project.artifactId}.git</developerConnection>
-      <tag>smt-site-skin-1.0</tag>
+      <tag>HEAD</tag>
   </scm>
 </project>
